# CMake-Test

./: .gitignore  CMakeLists.txt
apps/: CMakeLists.txt  main.cpp
include/: TestClass.h
src/: CMakeLists.txt  TestClass.cpp
